--- a/examples/3d/cube.html
+++ b/examples/3d/cube.html
@@ -23,7 +23,8 @@
       height: 100vh;
     }
   </style>
-  <script type="module" src="/examples/code-viewer.js"></script>
+<link rel="stylesheet" href="../common.css">
+<script type="module" src="/examples/code-viewer.js"></script>
 </head>
 
 <body>
