--- a/examples/3d/pbr-sphere.html
+++ b/examples/3d/pbr-sphere.html
@@ -53,7 +53,8 @@
       cursor: pointer;
     }
   </style>
-  <script type="module" src="/examples/code-viewer.js"></script>
+<link rel="stylesheet" href="../common.css">
+<script type="module" src="/examples/code-viewer.js"></script>
 </head>
 
 <body>
