--- a/examples/card-viewer-mushu.html
+++ b/examples/card-viewer-mushu.html
@@ -219,7 +219,8 @@
             }
         }
     </style>
-  <script type="module" src="/examples/code-viewer.js"></script>
+<link rel="stylesheet" href="./common.css">
+<script type="module" src="/examples/code-viewer.js"></script>
 </head>
 
 <body>
