--- a/examples/holographic-cards-demo.html
+++ b/examples/holographic-cards-demo.html
@@ -149,7 +149,8 @@
             color: #4ade80;
         }
     </style>
-  <script type="module" src="/examples/code-viewer.js"></script>
+<link rel="stylesheet" href="./common.css">
+<script type="module" src="/examples/code-viewer.js"></script>
 </head>
 
 <body>
