--- a/examples/scene/crystal-cluster.html
+++ b/examples/scene/crystal-cluster.html
@@ -119,7 +119,8 @@
             color: #a0d8ff;
         }
     </style>
-  <script type="module" src="/examples/code-viewer.js"></script>
+<link rel="stylesheet" href="../common.css">
+<script type="module" src="/examples/code-viewer.js"></script>
 </head>
 
 <body>
