--- a/examples/3d/crystal.html
+++ b/examples/3d/crystal.html
@@ -101,7 +101,8 @@
             box-shadow: 0 0 10px rgba(160, 216, 255, 0.5);
         }
     </style>
-  <script type="module" src="/examples/code-viewer.js"></script>
+<link rel="stylesheet" href="../common.css">
+<script type="module" src="/examples/code-viewer.js"></script>
 </head>
 
 <body>
