--- a/examples/3d/textured-torus.html
+++ b/examples/3d/textured-torus.html
@@ -35,7 +35,8 @@
       border-radius: 4px;
     }
   </style>
-  <script type="module" src="/examples/code-viewer.js"></script>
+<link rel="stylesheet" href="../common.css">
+<script type="module" src="/examples/code-viewer.js"></script>
 </head>
 
 <body>
