--- a/examples/advanced-model-scene.html
+++ b/examples/advanced-model-scene.html
@@ -74,7 +74,8 @@
             line-height: 1.5;
         }
     </style>
-  <script type="module" src="/examples/code-viewer.js"></script>
+<link rel="stylesheet" href="./common.css">
+<script type="module" src="/examples/code-viewer.js"></script>
 </head>
 
 <body>
