--- a/examples/boilerplate/fire.html
+++ b/examples/boilerplate/fire.html
@@ -38,7 +38,8 @@
       color: #3b82f6;
     }
   </style>
-  <script type="module" src="/examples/code-viewer.js"></script>
+<link rel="stylesheet" href="../common.css">
+<script type="module" src="/examples/code-viewer.js"></script>
 </head>
 
 <body>
