--- a/examples/crystal-cluster.html
+++ b/examples/crystal-cluster.html
@@ -129,7 +129,8 @@
             border-top: 1px solid rgba(255, 255, 255, 0.1);
         }
     </style>
-  <script type="module" src="/examples/code-viewer.js"></script>
+<link rel="stylesheet" href="./common.css">
+<script type="module" src="/examples/code-viewer.js"></script>
 </head>
 
 <body>
