--- a/examples/model-loader.html
+++ b/examples/model-loader.html
@@ -183,7 +183,8 @@
             color: #51cf66;
         }
     </style>
-  <script type="module" src="/examples/code-viewer.js"></script>
+<link rel="stylesheet" href="./common.css">
+<script type="module" src="/examples/code-viewer.js"></script>
 </head>
 
 <body>
