--- a/examples/scene/hierarchical.html
+++ b/examples/scene/hierarchical.html
@@ -39,7 +39,8 @@
             color: #ffaa44;
         }
     </style>
-  <script type="module" src="/examples/code-viewer.js"></script>
+<link rel="stylesheet" href="../common.css">
+<script type="module" src="/examples/code-viewer.js"></script>
 </head>
 
 <body>
