--- a/examples/scene/physical-materials.html
+++ b/examples/scene/physical-materials.html
@@ -62,7 +62,8 @@
             vertical-align: middle;
         }
     </style>
-  <script type="module" src="/examples/code-viewer.js"></script>
+<link rel="stylesheet" href="../common.css">
+<script type="module" src="/examples/code-viewer.js"></script>
 </head>
 
 <body>
